<resources>
    <string name="app_name">app_Radiobutton</string>
    //crea referencias
    <string name="txt_PrimerValor">  Ingresa el primer valor   </string>
    <string name="txt_Segundo">  Ingresa el segundo valor   </string>
    <string name="rb1">  Sumar   </string>
    <string name="rb2">  Restar   </string>
    <string name="rb3">  Multiplicar   </string>
    <string name="rb4">  Divición   </string>
    <string name="Button">  CALCULAR   </string>
    <string name="TextView_resultado">  Resultado   </string>
</resources>
